fixed the height on the header to be smaller; it was too big before.

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -29,7 +29,7 @@
         z-index: -10;//this will put it into the background
         top: 0;
         left: 0;
-        height: 1100px;
+        height: 790px;
         width: 1300px;
         background-color: silver;
         position: absolute;
@@ -42,7 +42,7 @@
         z-index: -10;//this will put it into the background
         top: 0;
         left: 0;
-        height: 1100px;
+        height: 790px;
         width: 1300px;
         background-color: aqua;
         position: absolute;
